--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FristAppKotlin</string>
+    <string name="toast_message">This is my first toast</string>
+    <string name="hello">Hello World</string>
+
 </resources>
